Create APIs for service